Fix Travis build on OS X
Installing SCons using pip has stopped working. Installing using Homebrew works
fine.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ addons:
 before_script: |
   pip install --user --install-option="--no-cython-compile" cython
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      pip install --user --egg scons
-      export PATH=/Users/travis/Library/Python/2.7/bin:$PATH
+      brew update
+      brew install scons
   fi
   rm -f cantera.conf
 script:
