--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ config.log
 coverage/
 coverage.info
 doc/sphinx/cython/examples
+doc/sphinx/cython/examples.rst
 doc/sphinx/matlab/examples/
 doc/sphinx/matlab/tutorials/
 doc/sphinx/matlab/code-docs/
