--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ coverage.info
 doc/sphinx/cython/examples
 doc/sphinx/cython/examples.rst
 doc/sphinx/matlab/examples/
+doc/sphinx/matlab/examples.rst
 doc/sphinx/matlab/tutorials/
 doc/sphinx/matlab/code-docs/
