--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.exe.manifest
 build/
 test/work/
+interfaces/cython/cantera/_cantera.h
 include/cantera/base/config.h
 include/cantera/ext/
 interfaces/matlab/ctpath.m
