--- a/src/SConscript
+++ b/src/SConscript
@@ -34,24 +34,28 @@ if env['CC'] == 'cl' and env['debug']:
 if env['use_pch']:
     if env['CC'] == 'cl':
         localenv['PCH'], pchobj = localenv.PCH('#include/cantera/base/system.cpp')
+        pch = localenv['PCH']
         libraryTargets.append(pchobj)
         localenv['PCHSTOP'] = 'cantera/base/system.h'
     else:
         localenv['precompiled_header'] = File('#include/cantera/base/system.h')
-        pch = build(localenv.GchSh('#include/cantera/base/system.h.gch',
-                              localenv['precompiled_header']))
-        # To force early compilaton of the precompiled header
-        localenv.Depends(env['config_h_target'], pch)
+        pch = localenv.GchSh('#include/cantera/base/system.h.gch',
+                              localenv['precompiled_header'])
+        # # To force early compilaton of the precompiled header
+        # localenv.Depends(env['config_h_target'], pch)
 
 else:
     removeFile('include/cantera/base/system.h.gch')
     env['pch_flags'] = []
+    pch = None
 
 for subdir, extensions, setup in libs:
     env2 = localenv.Clone()
     source = setup(env2, subdir, extensions)
     objects = env2.SharedObject(source)
     env2.Depends(objects, env2['config_h_target'])
+    if pch:
+        env2.Depends(objects, pch)
     libraryTargets.extend(objects)
 
 
