--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,13 @@ addons:
       - libboost-dev
 before_script: |
   pip install --user --install-option="--no-cython-compile" cython
+  pip install --user 3to2
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update
       brew install scons
       brew install boost
   fi
+  export PATH=$HOME/.local/bin:$PATH
   rm -f cantera.conf
 script:
   - scons build -j2 VERBOSE=y python_package=full python3_package=n blas_lapack_libs=lapack,blas optimize=n
