--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ addons:
     packages:
       - python-dev
       - python-numpy
+      - python-pip
+      - python3-dev
+      - python3-numpy
+      - python3-setuptools
       - gfortran
       - libsundials-serial-dev
       - liblapack-dev
@@ -20,9 +24,10 @@ before_script: |
       brew update
       brew install scons
       brew install boost
+      brew install python3
+      pip3 install numpy
   fi
-  export PATH=$HOME/.local/bin:$PATH
   rm -f cantera.conf
 script:
-  - scons build -j2 VERBOSE=y python_package=full python3_package=n blas_lapack_libs=lapack,blas optimize=n
+  - scons build -j2 VERBOSE=y python_package=full python3_package=y blas_lapack_libs=lapack,blas optimize=n
   - scons test
