--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,10 @@ install:
     C:\Python27-x64\Scripts\pip.exe install cython
     C:\Python27-x64\Scripts\pip.exe install 3to2
     C:\Python27-x64\Scripts\pip.exe install pypiwin32
+    C:\Python35-x64\Scripts\pip.exe install numpy
 
 build_script:
-- cmd: C:\Python27-x64\scons build -j2 boost_inc_dir=C:\Libraries\boost_1_62_0 debug=n VERBOSE=y
+- cmd: C:\Python27-x64\scons build -j2 boost_inc_dir=C:\Libraries\boost_1_62_0 debug=n VERBOSE=y python3_cmd=C:\Python35-x64\python.exe
 
 test_script:
 - ps: |
