--- a/doc/SConscript
+++ b/doc/SConscript
@@ -207,7 +207,8 @@ if localenv['sphinx_docs']:
         '1D/@Domain1D': ['1D/AxiStagnFlow.m', '1D/AxisymmetricFlow.m',
                       '1D/Inlet.m', '1D/Outlet.m', '1D/OutletRes.m',
                       '1D/Surface.m', '1D/SymmPlane.m'],
-        '1D/@Stack': ['1D/FreeFlame.m', '1D/npflame_init.m'],
+        '1D/@Stack': ['1D/FreeFlame.m', '1D/npflame_init.m',
+		              '1D/CounterFlowDiffusionFlame.m'],
         '@Interface': ['importEdge.m', 'importInterface.m'],
         '@Data': ['Air.m', 'gasconstant.m', 'GRI30.m',
              'Hydrogen.m', 'Methane.m', 'Nitrogen.m', 'oneatm.m',
