[Transport] Make SimpleTransport constructible without XML

--- a/test/SConscript
+++ b/test/SConscript
@@ -26,7 +26,8 @@ for optimize_flag in ('-O3', '-O2', '/O2'):
         ccflags.remove(optimize_flag)
 localenv['CCFLAGS'] = ccflags
 
-localenv['ENV']['CANTERA_DATA'] = Dir('#build/data').abspath
+localenv['ENV']['CANTERA_DATA'] = (Dir('#build/data').abspath + os.pathsep +
+                                   Dir('#test/data').abspath)
 
 PASSED_FILES = {}
 
