--- a/test/SConscript
+++ b/test/SConscript
@@ -209,14 +209,15 @@ def addMatlabTest(script, testName, dependencies=None, env_vars=()):
 
     return run_program
 
-if localenv['python_package'] in ('full', 'minimal'):
+if localenv['python2_package'] in ('full', 'minimal'):
     python_env_vars = {'PYTHONPATH': localenv['pythonpath_build2'],
-                       'PYTHON_CMD': localenv.subst('$python_cmd')}
-elif localenv['python3_package'] == 'y':
+                       'PYTHON_CMD': localenv.subst('$python2_cmd')}
+elif localenv['python3_package'] in ('full', 'minimal'):
     python_env_vars = {'PYTHONPATH': localenv['pythonpath_build3'],
                        'PYTHON_CMD': localenv.subst('$python3_cmd')}
 else:
-    python_env_vars = {} # Tests calling ck2cti or ctml_writer will fail
+    python_env_vars = {'PYTHONPATH': '../../build/python_minimal',
+                       'PYTHON_CMD': localenv.subst('$python_cmd')}
 
 
 # Instantiate tests
