Fix substitution of setup_cantera and ctpath.m
Use Python 3 variables by default, and Python 2 only if Python 3 isn't
being built

--- a/platform/posix/setup_cantera.in
+++ b/platform/posix/setup_cantera.in
@@ -35,9 +35,9 @@ fi
 
 if [ "@python_module_loc_sc@" != "" ]; then
     if [ -z $PYTHONPATH ]; then
-        PYTHONPATH=@python_module_loc@
+        PYTHONPATH=@python_module_loc_sc@
     else
-        PYTHONPATH=@python_module_loc@:$PYTHONPATH
+        PYTHONPATH=@python_module_loc_sc@:$PYTHONPATH
     fi
 fi
 
