--- a/platform/posix/SConscript
+++ b/platform/posix/SConscript
@@ -33,10 +33,11 @@ if localenv['layout'] != 'debian' and env['OS'] != 'Windows':
         env['python_cmd'] = env['python{}_cmd'.format(major)]
         env['python_array_home'] = env['python{}_array_home'.format(major)]
 
-    target = env.SubstFile('setup_cantera', 'setup_cantera.in')
-    localenv.AddPreAction(target, copy_var)
-    localenv.Depends(target, env['install_python{}_action'.format(major)])
-    install('$inst_bindir', target)
+    for script in ['setup_cantera', 'setup_cantera.csh']:
+        target = env.SubstFile(script, script + '.in')
+        localenv.AddPreAction(target, copy_var)
+        localenv.Depends(target, env['install_python{}_action'.format(major)])
+        install('$inst_bindir', target)
 
 # Cantera.mak include file for Makefile projects
 # cantera.pc for use with pkg-config
