--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ addons:
       - libboost-dev
 before_script: |
   echo TRAVIS_OS_NAME: $TRAVIS_OS_NAME
-  pip install --user --install-option="--no-cython-compile" cython
-  pip install --user 3to2
+  pip2 install --user --install-option="--no-cython-compile" cython
+  pip2 install --user 3to2
   if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update
       brew install scons
