--- a/doc/sphinx/matlab/examples.rst.in
+++ b/doc/sphinx/matlab/examples.rst.in
@@ -1,7 +1,7 @@
 .. _sec-matlab-examples:
 
-Index of Examples
-=================
+Index of Matlab Examples
+========================
 
 This is an index of the examples included with the Cantera Matlab Toolbox.
 
