--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/Cantera/sundials-mirror
 [submodule "ext/eigen"]
 	path = ext/eigen
-	url = https://github.com/Cantera/eigen-mirror.git
+	url = https://github.com/eigenteam/eigen-git-mirror
