--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,14 @@
 version: 1.0.{build}
 install:
 - ps: |
-    C:\Python27-x64\python.exe -m pip install --upgrade pip
     C:\Python27-x64\Scripts\pip.exe install --egg scons
-    C:\Python27-x64\Scripts\pip.exe install numpy
+    C:\Python27-x64\python.exe -m pip install --no-cache-dir --upgrade pip
+    C:\Python27-x64\Scripts\pip.exe install --no-cache-dir numpy
     C:\Python27-x64\Scripts\pip.exe install cython
     C:\Python27-x64\Scripts\pip.exe install 3to2
     C:\Python27-x64\Scripts\pip.exe install pypiwin32
-    C:\Python35-x64\python.exe -m pip install --upgrade pip
-    C:\Python35-x64\Scripts\pip.exe install numpy
+    C:\Python35-x64\python.exe -m pip install --no-cache-dir --upgrade pip
+    C:\Python35-x64\Scripts\pip.exe install --no-cache-dir numpy
 
 build_script:
 - cmd: C:\Python27-x64\scons build -j2 boost_inc_dir=C:\Libraries\boost_1_62_0 debug=n VERBOSE=y python3_cmd=C:\Python35-x64\python.exe
