Move Matlab docs out of the code-docs subfolder
Now that examples are gone, it's not needed anymore.

--- a/.gitignore
+++ b/.gitignore
@@ -40,9 +40,11 @@ config.log
 *.gch
 coverage/
 coverage.info
-doc/sphinx/cython/examples
-doc/sphinx/cython/examples.rst
-doc/sphinx/matlab/examples/
-doc/sphinx/matlab/examples.rst
-doc/sphinx/matlab/tutorials/
-doc/sphinx/matlab/code-docs/
+doc/sphinx/matlab/data.rst
+doc/sphinx/matlab/importing.rst
+doc/sphinx/matlab/kinetics.rst
+doc/sphinx/matlab/one-dim.rst
+doc/sphinx/matlab/thermodynamics.rst
+doc/sphinx/matlab/transport.rst
+doc/sphinx/matlab/utilities.rst
+doc/sphinx/matlab/zero-dim.rst
