--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: cantera
 Section: science
-Priority: extra
+Priority: optional
 Maintainer: Raymond Speth <speth@mit.edu>
-Build-Depends: debhelper (>= 8.0.0), scons, python-dev, python-numpy-dev, python-setuptools, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev, python3-numpy-dev, python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev
-Standards-Version: 3.9.5
+Build-Depends: debhelper (>= 11.0.0), scons, python-dev, python-numpy-dev, python-setuptools, cython (>= 0.23.0), gfortran, libsundials-dev, liblapack.so, libblas-dev, python3-dev, python3-numpy-dev, python3-setuptools, libeigen3-dev, libgtest-dev, libboost-dev
+Standards-Version: 4.1.4
 Homepage: https://www.cantera.org
 
 Package: cantera-common
@@ -50,7 +50,7 @@ Description: Python 3 user interface for Cantera
 
 Package: cantera-dev
 Architecture: any
-Depends: cantera-common, libsundials-serial-dev, liblapack-dev, libblas-dev, ${misc:Depends}
+Depends: cantera-common, libsundials-dev, liblapack.so, libblas-dev, ${misc:Depends}
 Description: Header files and static libraries for Cantera
  Cantera is a suite of object-oriented software tools for solving problems
  involving chemical kinetics, thermodynamics, and/or transport processes.
