[Doc] Generate XML output with Doxygen
This output will be useful to generate links from the website pages to
the C++ documentation; see Cantera/cantera-website#16

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,7 @@ script: |
           --rsh='ssh -i ./doc/ctdeploy_key'
           --exclude='*.map'
           --exclude='*.md5'
+          --exclude='/doxygen/xml'
           --delete
           --delete-excluded
         )
